--- a/.gitignore
+++ b/.gitignore
@@ -180,7 +180,8 @@ xcuserdata
 # c.f. http://guides.cocoapods.org/using/using-cocoapods.html#what-is-a-podfilelock
 # c.f. http://guides.cocoapods.org/using/using-cocoapods.html#should-i-ignore-the-pods-directory-in-source-control
 Pods
-#!Podfile.lock
+Example/Pods
+Example/Podfile.lock
 #
 # RUBY:
 #
